# backend/src/main/java/ch/mdma/rest/generated/model/AuthenticationRequest.java
@@ -15,22 +15,18 @@ import java.util.*;
 import jakarta.annotation.Generated;
 
 /**
- * User
+ * AuthenticationRequest
  */
 @lombok.Data @lombok.AllArgsConstructor @lombok.Builder
 
 @Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2025-05-21T09:23:52.949184439+02:00[Europe/Zurich]", comments = "Generator version: 7.7.0")
-public class User {
+public class AuthenticationRequest {
 
   private String username;
 
-  private String email;
+  private String password;
 
-  private String firstName;
-
-  private String lastName;
-
-  public User() {
+  public AuthenticationRequest() {
     super();
   }
 
