# backend/src/main/java/ch/mdma/rest/generated/model/UserRegistrationRequest.java
@@ -15,22 +15,24 @@ import java.util.*;
 import jakarta.annotation.Generated;
 
 /**
- * User
+ * UserRegistrationRequest
  */
 @lombok.Data @lombok.AllArgsConstructor @lombok.Builder
 
 @Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2025-05-21T09:23:52.949184439+02:00[Europe/Zurich]", comments = "Generator version: 7.7.0")
-public class User {
+public class UserRegistrationRequest {
 
   private String username;
 
   private String email;
 
+  private String password;
+
   private String firstName;
 
   private String lastName;
 
-  public User() {
+  public UserRegistrationRequest() {
     super();
   }
 
