# backend/src/main/java/ch/mdma/rest/generated/model/UserRegistrationResponse.java
@@ -2,6 +2,7 @@ package ch.mdma.rest.generated.model;
 
 import java.net.URI;
 import java.util.Objects;
+import ch.mdma.rest.generated.model.TokenResponse;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonCreator;
 import org.openapitools.jackson.nullable.JsonNullable;
@@ -15,24 +16,18 @@ import java.util.*;
 import jakarta.annotation.Generated;
 
 /**
- * User
+ * UserRegistrationResponse
  */
 @lombok.Data @lombok.AllArgsConstructor @lombok.Builder
 
 @Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2025-05-21T09:23:52.949184439+02:00[Europe/Zurich]", comments = "Generator version: 7.7.0")
-public class User {
+public class UserRegistrationResponse {
 
   private String username;
 
   private String email;
 
-  private String firstName;
-
-  private String lastName;
-
-  public User() {
-    super();
-  }
+  private TokenResponse token;
 
 }
 
