# backend/src/main/java/ch/mdma/rest/generated/model/UserUpdateResponse.java
@@ -15,12 +15,12 @@ import java.util.*;
 import jakarta.annotation.Generated;
 
 /**
- * User
+ * UserUpdateResponse
  */
 @lombok.Data @lombok.AllArgsConstructor @lombok.Builder
 
 @Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2025-05-21T09:23:52.949184439+02:00[Europe/Zurich]", comments = "Generator version: 7.7.0")
-public class User {
+public class UserUpdateResponse {
 
   private String username;
 
@@ -30,9 +30,7 @@ public class User {
 
   private String lastName;
 
-  public User() {
-    super();
-  }
+  private String aboutMe;
 
 }
 
